# simple-qt-application

./: README.md  setup_script.sh
QtApplication/: ApplicationManager.cpp  ApplicationManager.h  CMakeLists.txt  Main.qml  NetworkManager.cpp  NetworkManager.h  README.md  TimerManager.cpp  TimerManager.h  USBManager.cpp  USBManager.h  main.cpp
QtApplication/headers/: ApplicationManager.h  NetworkManager.h  TimerManager.h
QtApplication/include/: NetworkManager.h
QtApplication/source/: ApplicationManager.cpp  NetworkManager.cpp  TimerManager.cpp  main.cpp
QtApplication/src/: NetworkManager.cpp  main.cpp
SimpleServer/: README.md  requirements.txt
SimpleServer/app/: main.py
SimpleServer/app/models/: item.py
SimpleServer/app/qml_files/: Main.qml
SimpleServer/app/routers/: cleanup_router.py  qml_router.py  shutdown_router.py
